# brewery

./: .env.example  .gitignore  Containerfile  README.md  com.brewery.agent.plist  install.sh  podman-compose.yaml  pyproject.toml  renovate.json
.github/workflows/: agent.yaml  build.yaml  server.yaml
agent/: go.mod  main.go
server/: database.py  main.py  models.py  osv_refresh.py  schemas.py  settings.py
server/alembic/: env.py
server/alembic/versions/: 001_initial.py  002_add_serial_number.py  003_add_agent_version.py  004_add_commands.py  005_add_tags.py  006_add_tag_taps.py  007_add_installed_taps.py  008_merge_taps_into_tag_packages.py  009_add_vulnerabilities.py  010_add_vuln_ignore.py
server/routes/: api.py  web.py
server/templates/: base.html  host.html  index.html  install.sh  login.html  outdated.html  package.html  packages.html  tag.html  tags.html  vulnerabilities.html
server/templates/partials/: command_row.html  command_rows.html  host_rows.html  host_tags.html  outdated_rows.html  package_rows.html  packages.html  tag_hosts.html  tag_packages.html  tag_taps.html
