[project]
name = "brewery"
version = "0.0.0"
description = "Homebrew package inventory server"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "alembic>=1.13.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.9",
    "pydantic-settings>=2.0.0",
]

[project.scripts]
brewery-server = "server.main:run"

[tool.alembic]
script_location = "server:alembic"
file_template = "%%(rev)s_%%(slug)s"
prepend_sys_path = "."
timezone = "UTC"

[tool.uv]
package = true

[tool.uv.build-backend]
module-name = "server"
module-root = ""

[build-system]
requires = ["uv_build<0.12"]
build-backend = "uv_build"
